--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build" : "./build.sh",
+    "build": "./build.sh",
     "start": "bankai start app.js"
   },
   "keywords": [],
@@ -14,7 +14,9 @@
     "bankai": "^9.11.0",
     "choo": "^6.11.0-preview1",
     "highlight.js": "^9.12.0",
+    "invert-color": "^1.2.3",
     "markdown-it": "^8.4.1",
-    "materialize-css": "^1.0.0-beta"
+    "materialize-css": "^1.0.0-beta",
+    "mrcolor": "0.0.1"
   }
 }
