--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bankai": "^9.11.0",
     "choo": "^6.11.0-preview1",
+    "ecstatic": "^3.2.0",
     "highlight.js": "^9.12.0",
     "invert-color": "^1.2.3",
     "markdown-it": "^8.4.1",
