--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "./build.sh",
+    "build": "./build.sh && bankai build app.js --base 'https://rook2pawn.github.io/choo-examples'",
     "start": "bankai start app.js"
   },
   "keywords": [],
